/*
 * $Id: ChangeLog,v 1.2247 2004/02/09 06:35:38 walito Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/
2004-02-09 19:10 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * contrib/hbzlib/zipnew.cpp
    * castings.

  * source/compiler/hbfunchk.c
  * source/rtl/str.c
    * allow STR() to receive 4th parameter as Logical to ltrim returned value.
      ( WARNING: This is an xHarbour extension )

    /*
    If 4th parameter is passed, the 2nd and 3rd will be ignored if not passed,
    thus maintained Clipper error handling compatibility. The 4th parameter is
    handy to replace quite frequently used phrase: LTrim( Str( nVal ) ). So,
    instead of using Ltrim(Str(nVal)), users can used Str( nVal,,,.T. )
    */

2004-02-09 03:25 UTC-0300 Walter Negro <anegro@overnet.com.ar>
  * source/vm/extend.c
  * include/hbapi.h
    + New functions hb_retnint and hb_retnintlen
  * source/rtl/round.c
    % Optimized and corrected algorithm.
      Thank you Andi for your test.
  * source/rtl/val.c
    % Optimized for integer values. Now is compatible with LONGLONG numbers.
      Thank you Andi, too.

2004-02-09 11:50 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * utils/hbtest/rt_array.prg
    * change return value to xHarbour specific.
      ( -> in xHarbour, Array( 1, 0, "A" ) is a valid expression )

2004-02-09 09:30 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * utils/hbtest/rt_math.prg
    + Add some math test on rounding and longlong values

2004-02-09 00:20 UTC-0300 Luiz Rafael Culik Guimares <culikr@brturbo.com>
  * contrib/hbzlib/zipnew.cpp
    !fixed all unzip function. it was not respecting the directory to extract the files
    Reported by Synvain Robert and Patrick Mast
    
2004-02-08 07:20 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/rtl/round.c
    ! change pow10( n ) to pow( 10, n ) for MSVC.
