@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.2247 2004/02/09 06:35:38 walito Exp $
+ * $Id: ChangeLog,v 1.2248 2004/02/09 12:11:28 andijahja Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,16 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2004-02-08 13:04 UTC+0100 Giancarlo Niccolai <gian@niccolai.ws>
+  * source/rtl/gx.c
+    ! Now returning always a STRING type, independently on the
+      parameters.
+
+  * source/rtl/gtxvt/gtxvt.c
+    ! gt_GetClipboardSize() was not updating X clipboard statius,
+      returning outdated data.
+
 2004-02-09 19:10 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
   * contrib/hbzlib/zipnew.cpp
     * castings.
